@@ -1,5 +1,10 @@
 # $Id$
 
+2007-11-12	Dmitry E. Pismenny
+
+	* main/Markup/Feed/FeedReader.class.php: errors from simplexml_load_file()
+	translated into WrongStateExceptions.
+
 2007-11-07	Ivan Y. Khvostishkov
 
 	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
